Mudança do nome

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <header>
         <div class="dsmeta-logo-container">
-            <img src="logo.svg" alt="DSMeta">
-            <h1>DSMeta</h1>
+            <img src="logo.svg" alt="Notificar">
+            <h1>DSMeta-Project</h1>
             <p>
                 Desenvolvido por 
                 <a href="https://www.github.com/Rene1814">github.com/Rene1814</a></p> 
         </div>
     </header>
 
-    <main> <!--área principal do site, abaixo do cabeçálho-->
+    <main> <!--área principal do site, abaixo do cabeçalho-->
         <section id="sales"> <!--área card dentro da main-->
             <div class="dsmeta-container"> <!--usada pra controlar largura máxima do card-->
                 <div class="dsmeta-card">
